--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/sgh.ico">
+  <meta name="description" content="Personal Website for Haoyi Wang>
+  <meta name="author" content="862195504">
 
-  <title>John Doe - Business Administration</title>
+  <title>Haoyi Wang - CEO</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Haoyi Wang</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/haoyiwang.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Haoyi Wang
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Administration📚 </div>
+        <div class="subheading mb-5">CEO</div>
+          <p class="lead mb-4">Hi, my name is Haoyi Wang or Yugs. I am currently the CEO of SGH Network, as well as the owner and GM of Galaxy News. I am 19 years old, and I am currently a second year at UC Riverside majoring in Pre-Business. The two companies I run are both in the Mobile Esports sector, and they both cover different things. SGH Network is a tournament hosting network, as well as a content network, where we feature the best and most flashy players in the Call of Duty: Mobile and League of Legends: Wild RIft scenes in large scale online events. Galaxy News is a news service that is dedicated to covering important Mobile Esports news across different mobile games as well as regions. We have managed to gain over 18000 members on Discord, as well as nearly a thousand followers on Twitter. <br><br>
 
-        Enter bio here<br><br>
+        I got into mobile gaming because it was actually my very first opportunity to play games uninterrupted, so I fell in love with the mobile gaming platform. Over the years, I have been everything, from a pro player to a team manager, to an org owner, as well as my current roles. I have over 4 years of experience in Mobile Gaming, and I use that experience to help me make decisions. I am currently based in the Call of Duty: Mobile scene, and I hope to eventually work directly with Activision to produce high quality CODM events for the players that have been grinding for over two years now. While Call of Duty: Mobile is my current focus, I will be shifting focuses in the future in order to cover other games, such as Valorant Mobile, Apex Mobile, Battlefield Mobile, as well as any other upcoming mobile games. <br><br>
 
-        Enter bio here
+        The reason why I chose these companies is because I believed in their vision. For SGH Network, we wanted to provide a place where everyone could compete, regardless of their skill level, and have it be worth their time. I thought this was really important because I remember when I first got into mobile and that there were no oppertunites, and I just happened to get lucky and practiced enough. With Galaxy News, we want to be able to elevate mobile gaming past where it is stuck now, but make it  equal and even surpass both console and PC gaming. We can achieve this goal by putting out professional news that are comprable to those in the other scenes, so that even newcomers will be able to understand the comp scene fairly easily. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://challonge.com/SGHChampionsNA">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/Haoyiwang519">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/manageryugs">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:manageryugs@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +93,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">CEO</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">SGH Network</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Ran over 50 large scale events<br> 
+              • Coordinated Livestreams of those events<br>
+              • Head Researcher at the company<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">General Manager</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Galaxy News</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Handled public relation issues<br>
+              • Worked on moving the company onto Twitter<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">January 2021 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Team Manager</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Aphelion Esports</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Restarted the Multiplayer team program<br>
+            • Brought in a top European Team<br>
+            • Created an North American team <br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">March 2020 - August 2020</span>
           </div>
         </div>
 
@@ -148,37 +148,15 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
+        
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>Management</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">October 2020 - May 2024</span>
           </div>
         </div>
 
@@ -191,7 +169,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/1.png" width="500px">
+            <img src="img/supercopa.png" width="500px"><br>
+            <img src="img/cd.png" width="500px">
+            <img src="img/wilfrift.png" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +180,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Haoyi Wang</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
